--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
 #btnRow {
     margin-top: 5px;
 }
+
+#gifRow {
+    margin-top: 5px;
+}
+
+body { 
+    background-image: url("../images/bg.png");
+    background-repeat: repeat;
+}
